--- a/conf/db_converter_test.conf
+++ b/conf/db_converter_test.conf
@@ -1,5 +1,7 @@
 [databases]
-test_dbc = pq://postgres:postgres87291@127.0.0.1:5432/test_dbc
+pg_db = pq://postgres:postgres87291@127.0.0.1:5461/postgres
+test_dbc_01 = pq://postgres:postgres87291@127.0.0.1:5461/test_dbc_01
+test_dbc_02 = pq://postgres:postgres87291@127.0.0.1:5461/test_dbc_02
 
 [main]
 application_name = db_converter
