--- a/conf/db_converter_test.conf
+++ b/conf/db_converter_test.conf
@@ -1,15 +1,15 @@
 [databases]
-pg_db = pq://postgres:postgres87291@127.0.0.1:5461/postgres
-test_dbc_01 = pq://postgres:postgres87291@127.0.0.1:5461/test_dbc_01
-test_dbc_02 = pq://postgres:postgres87291@127.0.0.1:5461/test_dbc_02
+pg_db = pq://postgres:postgres87291@127.0.0.1:5432/postgres
+test_dbc_01 = pq://postgres:postgres87291@127.0.0.1:5432/test_dbc_01
+test_dbc_02 = pq://postgres:postgres87291@127.0.0.1:5432/test_dbc_02
 
 [main]
 application_name = db_converter
 lock_observer_sleep_interval = 1
 execute_sql = True             # Set "False" to prevent SQL executing in database
 conn_exception_sleep_interval = 1
-cancel_wait_tx_timeout = '3 minutes'
-cancel_blocker_tx_timeout = '60 seconds'
+cancel_wait_tx_timeout = '5 seconds'
+cancel_blocker_tx_timeout = '5 seconds'
 detailed_traceback = True
 db_name_all_confirmation = False
 
