--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,23 @@ language: python
 python:
   - "3.8"
 dist: xenial
-addons:
-  postgresql: "12"
-  apt:
-    packages:
-    - postgresql-12
-    - postgresql-client-12
-env:
-  global:
-  - PGPORT=5432
 install:
   - pip install sqlparse
   - pip install requests
   - pip install pyzipper
+before_script:
+  - export PATH="/usr/lib/postgresql/12/bin:$PATH"
+  - sudo apt-get update
+  - sudo apt-get install -y net-tools
+  - sudo apt-get --yes remove postgresql\*
+  - sudo apt-get install -y postgresql-12 postgresql-client-12
+  - sudo sed -ie 's/^port.*/port = 5432/' /etc/postgresql/12/main/postgresql.conf
+  - sudo sed -ie 's/^max_connections.*/max_connections = 150/' /etc/postgresql/12/main/postgresql.conf
+  - sudo sed -i  '/listen_addresses/s/^#//g' /etc/postgresql/12/main/postgresql.conf
+  - sudo sed -ie "s/^listen_addresses.*/listen_addresses = '*'/" /etc/postgresql/12/main/postgresql.conf
+  - sudo sed -i -e '/local.*peer/s/postgres/all/' -e 's/peer\|md5/trust/g' /etc/postgresql/12/main/pg_hba.conf
+  - sudo pg_ctlcluster 12 main restart
+  - psql -c "ALTER USER postgres WITH PASSWORD 'postgres87291';" -U postgres -h 127.0.0.1
+  - psql -c "select version();" -U postgres -h 127.0.0.1
 script:
-  - tests/test_packets.py
+  - python3.8 tests/test_packets.py
