--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ jobs:
         - pip install sqlparse
         - pip install requests
         - pip install pyzipper
+        - pip install coveralls
       before_script:
         - export PATH="/usr/lib/postgresql/10/bin:$PATH"
         - sudo apt-get update
@@ -23,7 +24,9 @@ jobs:
         - psql -c "ALTER USER postgres WITH PASSWORD 'postgres87291';" -U postgres -h 127.0.0.1
         - psql -c "select version();" -U postgres -h 127.0.0.1
       script:
-        - python3.6 tests/test_packets.py
+        - python3.6 tests/test_packets.py --cov coveralls
+      after_success:
+        - coveralls
     - os: linux
       dist: bionic
       python: "3.8"
@@ -31,6 +34,7 @@ jobs:
         - pip install sqlparse
         - pip install requests
         - pip install pyzipper
+        - pip install coveralls
       before_script:
         - export PATH="/usr/lib/postgresql/12/bin:$PATH"
         - sudo apt-get update
@@ -44,4 +48,6 @@ jobs:
         - psql -c "ALTER USER postgres WITH PASSWORD 'postgres87291';" -U postgres -h 127.0.0.1
         - psql -c "select version();" -U postgres -h 127.0.0.1
       script:
-        - python3.8 tests/test_packets.py
+        - python3.8 tests/test_packets.py --cov coveralls
+      after_success:
+        - coveralls
