--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ jobs:
         - pip install sqlparse
         - pip install requests
         - pip install pyzipper
+        - pip install pytest
+        - pip install pytest-cov
         - pip install coveralls
       before_script:
         - export PATH="/usr/lib/postgresql/10/bin:$PATH"
@@ -24,7 +26,7 @@ jobs:
         - psql -c "ALTER USER postgres WITH PASSWORD 'postgres87291';" -U postgres -h 127.0.0.1
         - psql -c "select version();" -U postgres -h 127.0.0.1
       script:
-        - python3.6 tests/test_packets.py --cov coveralls
+        - pytest --cov=tests/test_packets.py
       after_success:
         - coveralls
     - os: linux
@@ -34,6 +36,8 @@ jobs:
         - pip install sqlparse
         - pip install requests
         - pip install pyzipper
+        - pip install pytest
+        - pip install pytest-cov
         - pip install coveralls
       before_script:
         - export PATH="/usr/lib/postgresql/12/bin:$PATH"
@@ -48,6 +52,6 @@ jobs:
         - psql -c "ALTER USER postgres WITH PASSWORD 'postgres87291';" -U postgres -h 127.0.0.1
         - psql -c "select version();" -U postgres -h 127.0.0.1
       script:
-        - python3.8 tests/test_packets.py --cov coveralls
+        - pytest --cov=tests/test_packets.py
       after_success:
         - coveralls
