--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,6 @@ jobs:
         - pip install sqlparse
         - pip install requests
         - pip install pyzipper
-        - pip install pytest
-        - pip install pytest-cov
         - pip install coveralls
       before_script:
         - export PATH="/usr/lib/postgresql/10/bin:$PATH"
@@ -26,7 +24,7 @@ jobs:
         - psql -c "ALTER USER postgres WITH PASSWORD 'postgres87291';" -U postgres -h 127.0.0.1
         - psql -c "select version();" -U postgres -h 127.0.0.1
       script:
-        - pytest --cov=tests/test_packets.py
+        - py.test tests/test_packets.py --cov coveralls
       after_success:
         - coveralls
     - os: linux
@@ -36,8 +34,6 @@ jobs:
         - pip install sqlparse
         - pip install requests
         - pip install pyzipper
-        - pip install pytest
-        - pip install pytest-cov
         - pip install coveralls
       before_script:
         - export PATH="/usr/lib/postgresql/12/bin:$PATH"
@@ -52,6 +48,6 @@ jobs:
         - psql -c "ALTER USER postgres WITH PASSWORD 'postgres87291';" -U postgres -h 127.0.0.1
         - psql -c "select version();" -U postgres -h 127.0.0.1
       script:
-        - pytest --cov=tests/test_packets.py
+        - py.test tests/test_packets.py --cov coveralls
       after_success:
         - coveralls
