--- a/conf/db_converter_test.conf
+++ b/conf/db_converter_test.conf
@@ -12,6 +12,7 @@ cancel_wait_tx_timeout = '5 seconds'
 cancel_blocker_tx_timeout = '5 seconds'
 detailed_traceback = True
 db_name_all_confirmation = False
+schema_location = dbc
 
 [log]
 log_level = Info                # Debug, Info, Error
