unittests: added mocks for matterhook

--- a/conf/db_converter_test.conf
+++ b/conf/db_converter_test.conf
@@ -27,3 +27,7 @@ vacuum_cost_limit = 5000
 work_mem = 200MB
 maintenance_work_mem = 1GB
 timezone = Europe/Moscow
+
+[matterhook]
+url = https://127.0.0.1:1443
+chat_keys = dbc-dba/abcd
