--- a/conf/db_converter_test.conf
+++ b/conf/db_converter_test.conf
@@ -2,6 +2,7 @@
 pg_db = pq://postgres:postgres87291@127.0.0.1:5432/postgres
 test_dbc_01 = pq://postgres:postgres87291@127.0.0.1:5432/test_dbc_01
 test_dbc_02 = pq://postgres:postgres87291@127.0.0.1:5432/test_dbc_02
+test_dbc_03 = pq://postgres:postgres87291@127.0.0.1:5432/test_dbc_03
 
 [main]
 application_name = db_converter
