--- a/.travis.yml
+++ b/.travis.yml
@@ -53,3 +53,28 @@ jobs:
         - coverage run --source=dbccore,psc/psccommon,psc/psclogger,actiontracker,matterhook,db_converter tests/test_packets.py -v
       after_success:
         - coveralls
+    - os: linux
+      dist: focal
+      python: "3.9"
+      install:
+        - pip install sqlparse
+        - pip install requests
+        - pip install pyzipper
+        - pip install coverage
+        - pip install coveralls
+      before_script:
+        - export PATH="/usr/lib/postgresql/13/bin:$PATH"
+        - sudo apt-get update
+        - sudo apt-get --yes remove postgresql\*
+        - sudo apt-get install -y postgresql-13 postgresql-client-13
+        - sudo sed -ie 's/^port.*/port = 5432/' /etc/postgresql/13/main/postgresql.conf
+        - sudo sed -i  '/listen_addresses/s/^#//g' /etc/postgresql/13/main/postgresql.conf
+        - sudo sed -ie "s/^listen_addresses.*/listen_addresses = '127.0.0.1'/" /etc/postgresql/13/main/postgresql.conf
+        - sudo sed -i -e '/local.*peer/s/postgres/all/' -e 's/peer\|md5/trust/g' /etc/postgresql/13/main/pg_hba.conf
+        - sudo pg_ctlcluster 13 main restart
+        - psql -c "ALTER USER postgres WITH PASSWORD 'postgres87291';" -U postgres -h 127.0.0.1
+        - psql -c "select version();" -U postgres -h 127.0.0.1
+      script:
+        - coverage run --source=dbccore,psc/psccommon,psc/psclogger,actiontracker,matterhook,db_converter tests/test_packets.py -v
+      after_success:
+        - coveralls
