update travis job

--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,9 @@ jobs:
         - pip install coveralls
       before_script:
         - export PATH="/usr/lib/postgresql/13/bin:$PATH"
+        - sudo apt -y install vim bash-completion wget
+        - sudo wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+        - sudo echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" |sudo tee  /etc/apt/sources.list.d/pgdg.list
         - sudo apt-get update
         - sudo apt-get --yes remove postgresql\*
         - sudo apt-get install -y postgresql-13 postgresql-client-13
