--- a/conf/db_converter_test.conf
+++ b/conf/db_converter_test.conf
@@ -29,6 +29,6 @@ work_mem = 200MB
 maintenance_work_mem = 1GB
 timezone = Europe/Moscow
 
-[matterhook]
+[mattermost_hooks]
 url = https://127.0.0.1:1443
 chat_keys = dbc-dba/abcd
