--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,8 @@ jobs:
       dist: xenial
       python: "3.6"
       install:
-        - pip install sqlparse
-        - pip install requests
-        - pip install pyzipper
+        - pip install -r requirements.txt
         - pip install coverage
-        - pip install slack-sdk
         - pip install coveralls
       before_script:
         - export PATH="/usr/lib/postgresql/10/bin:$PATH"
@@ -33,11 +30,8 @@ jobs:
       dist: bionic
       python: "3.8"
       install:
-        - pip install sqlparse
-        - pip install requests
-        - pip install pyzipper
+        - pip install -r requirements.txt
         - pip install coverage
-        - pip install slack-sdk
         - pip install coveralls
       before_script:
         - export PATH="/usr/lib/postgresql/12/bin:$PATH"
@@ -59,11 +53,8 @@ jobs:
       dist: focal
       python: "3.9"
       install:
-        - pip install sqlparse
-        - pip install requests
-        - pip install pyzipper
+        - pip install -r requirements.txt
         - pip install coverage
-        - pip install slack-sdk
         - pip install coveralls
       before_script:
         - export PATH="/usr/lib/postgresql/13/bin:$PATH"
